--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   http: ^1.3.0
   shared_preferences: ^2.5.3
   animated_bottom_navigation_bar: ^1.4.0
+  image_picker: ^1.1.2
+  cached_network_image: ^3.4.1
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
